fixed img text bleeding in small screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,6 +274,8 @@ footer a:hover {
 }
 
 .past p {
+  width: 90%;
+  margin: 0 auto;
   text-align: center;
 }
 
@@ -302,19 +304,11 @@ footer a:hover {
 }
 
 .past-item p {
-  width: 40%;
-  position: absolute;
-  z-index: 3;
-  margin: 40px auto;
-  font-size: 3rem;
-  color: #ececec;
-}
-
-.past-gradient {
   width: 100%;
-  height: 25vh;
-  background-color: #ec53428c;
-  display: block;
+  height: 50%;
+  margin: 20px auto;
+  font-size: 3rem;
+  color: #ececec; 
 }
 
 /* tickets page */
@@ -523,13 +517,8 @@ th {
     height: 30vh;
   }
 
-  .past-item p {
-    width: 40%;
-    position: absolute;
-    z-index: 3;
-    margin: 20px auto;
+  .past-item p {    
     font-size: 5rem;
-    color: #ececec;
   }
 
   /* tickets page */
